name: spanout
version: 0.1.0.1
category: Game
synopsis: A breakout clone written in netwire and gloss
homepage: https://github.com/vtan/spanout
author: Viktor Tanyi
maintainer: Viktor Tanyi <tanyi.viktor@gmail.com>
license: BSD3
license-file: LICENSE
description:
  A breakout clone written in netwire and gloss.
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/vtan/spanout.git

executable spanout
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Spanout.Common, Spanout.Gameplay, Spanout.Graphics, Spanout.Level,
    Spanout.Main, Spanout.Wire
  ghc-options:
    -Wall -O2 -funbox-strict-fields -threaded -fprof-auto -rtsopts -with-rtsopts=-N
  other-extensions:
    Arrows, MultiWayIf, RecordWildCards, TemplateHaskell, TypeOperators
  build-depends:
    base >=4.6,
    mtl >=2.2,
    containers >=0.5,
    lens >=4.9,
    linear >=1.18,
    MonadRandom >=0.4,
    netwire >=5.0,
    gloss >=1.8
  default-language: Haskell2010
